Updated to Bootstrap 3.1.0, fixed divider color on small screens

--- a/public/resources/stylesheets/modlist-blue.css
+++ b/public/resources/stylesheets/modlist-blue.css
@@ -1,95 +1,101 @@
 td a {
-	color: #0072C6;
+    color: #0072C6;
 }
 td:first-child>a{
-	font-weight: bold;
+    font-weight: bold;
 }
 td a:hover {
-	color: rgba(00,114,198,.8);
-	text-decoration: none;
+    color: rgba(00,114,198,.8);
+    text-decoration: none;
 }
 .ml-nav-blue {
-	background-color: #0072C6;
-	border-color: #005696;
+    background-color: #0072C6;
+    border-color: #005696;
 }
 .ml-nav-blue .navbar-header {
-	text-shadow: 0 -1px 0 rgba(0,0,0,.15);
+    text-shadow: 0 -1px 0 rgba(0,0,0,.15);
 }
 .ml-nav-blue .navbar-collapse, .ml-nav-blue .navbar-form {
-	border-color: #005696;
+    border-color: #005696;
 }
 .ml-nav-blue .navbar-brand {
-	color: #fff;
+    color: #fff;
 }
 .ml-nav-blue .navbar-nav > li > a, .ml-nav-blue .navbar-nav > li > p {
-	color: #E4E8FF;
+    color: #E4E8FF;
 }
 .ml-nav-blue .navbar-nav > .dropdown > a .caret {
-	border-top-color: #E4E8FF;
-	border-bottom-color: #E4E8FF;
+    border-top-color: #E4E8FF;
+    border-bottom-color: #E4E8FF;
 }
 .ml-nav-blue .navbar-toggle {
-	border-color: #0072C6;
+    border-color: #0072C6;
 }
 .ml-nav-blue .navbar-toggle:hover, .ml-nav-blue .navbar-toggle:focus {
-	background-color: #005696;
-	border-color: #005696;
+    background-color: #005696;
+    border-color: #005696;
 }
 .ml-nav-blue .navbar-nav>.open>a, .ml-nav-blue .navbar-nav>.open>a:hover, .ml-nav-blue .navbar-nav>.open>a:focus {
-	color: #fff;
-	background-color: #005696;
+    color: #fff;
+    background-color: #005696;
 }
 @media (max-width: 767px) { /*less than @screen-sm*/
-	.ml-nav-blue .navbar-nav .open .dropdown-menu>li>a {
-		color: #E4E8FF;
-	}
-	.ml-nav-blue .navbar-nav .open .dropdown-menu>li>a:hover {
-		color: #fff;
-	}
+    .ml-nav-blue .navbar-nav .open .dropdown-menu>li>a {
+        color: #E4E8FF;
+    }
+    .ml-nav-blue .navbar-nav .open .dropdown-menu>li>a:hover {
+        color: #fff;
+    }
+    .ml-nav-blue .navbar-nav .open .dropdown-menu .divider {
+        background-color: #005696;
+    }
 }
 
 .ml-nav-black {
-	background-color: #2D2D2D;
-	border-color: #000;
+    background-color: #2D2D2D;
+    border-color: #000;
 }
 .ml-nav-black .navbar-header {
-	text-shadow: 0 -1px 0 rgba(0,0,0,.15);
+    text-shadow: 0 -1px 0 rgba(0,0,0,.15);
 }
 .ml-nav-black .navbar-collapse, .ml-nav-black .navbar-form {
-	border-color: #000;
+    border-color: #000;
 }
 .ml-nav-black .navbar-brand {
-	color: #fff;
+    color: #fff;
 }
 .ml-nav-black .navbar-nav > li > a {
-	color: #bbb;
+    color: #bbb;
 }
 .ml-nav-black .navbar-nav > .dropdown > a .caret {
-	border-top-color: #bbb;
-	border-bottom-color: #bbb;
+    border-top-color: #bbb;
+    border-bottom-color: #bbb;
 }
 .ml-nav-black .navbar-toggle {
-	border-color: #2D2D2D;
+    border-color: #2D2D2D;
 }
 .ml-nav-black .navbar-toggle:hover, .ml-nav-black .navbar-toggle:focus {
-	background-color: #000;
-	border-color: #000;
+    background-color: #000;
+    border-color: #000;
 }
 .ml-nav-black .navbar-nav>.open>a, .ml-nav-black .navbar-nav>.open>a:hover, .ml-nav-black .navbar-nav>.open>a:focus {
-	color: #fff;
-	background-color: #000;
+    color: #fff;
+    background-color: #000;
 }
 @media (max-width: 767px) { /*less than @screen-sm*/
-	.ml-nav-black .navbar-nav .open .dropdown-menu>li>a {
-		color: #E4E8FF;
-	}
-	.ml-nav-black .navbar-nav .open .dropdown-menu>li>a:hover {
-		color: #fff;
-	}
+    .ml-nav-black .navbar-nav .open .dropdown-menu>li>a {
+        color: #E4E8FF;
+    }
+    .ml-nav-black .navbar-nav .open .dropdown-menu>li>a:hover {
+        color: #fff;
+    }
+    .ml-nav-black .navbar-nav .open .dropdown-menu .divider {
+        background-color: #111;
+    }
 }
 
 body {
-	padding-top: 70px;
+    padding-top: 70px;
 }
 .table>thead>tr>td.fade-success,
 .table>tbody>tr>td.fade-success,
@@ -103,92 +109,92 @@ body {
 .table>thead>tr.fade-success>th,
 .table>tbody>tr.fade-success>th,
 .table>tfoot>tr.fade-success>th {
-	-webkit-transition: all 3s;
-	transition: all 3s;
+    -webkit-transition: all 3s;
+    transition: all 3s;
 }
 .depends:hover, .depends:focus {
-	text-decoration: none;
+    text-decoration: none;
 }
 .label, .tooltip {
-	font-weight: normal;
+    font-weight: normal;
 }
 .twitter-typeahead .tt-query,
 .twitter-typeahead .tt-hint {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 .twitter-typeahead .tt-hint {
-  display: none;
+    display: none;
 }
 .tt-dropdown-menu {
-  min-width: 160px;
-  margin-top: 0;
-  padding: 5px 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0,0,0,.2);
-  *border-right-width: 2px;
-  *border-bottom-width: 2px;
-  -webkit-border-radius: 0 0 6px 6px;
-     -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-          box-shadow: 0 5px 10px rgba(0,0,0,.2);
-  -webkit-background-clip: padding-box;
-     -moz-background-clip: padding;
-          background-clip: padding-box;
+    min-width: 160px;
+    margin-top: 0;
+    padding: 5px 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.2);
+    *border-right-width: 2px;
+    *border-bottom-width: 2px;
+    -webkit-border-radius: 0 0 6px 6px;
+    -moz-border-radius: 0 0 6px 6px;
+    border-radius: 0 0 6px 6px;
+    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
 }
 
 .tt-suggestion {
-  display: block;
-  padding: 3px 20px;
-  border-top: 1px solid #ccc;
+    display: block;
+    padding: 3px 20px;
+    border-top: 1px solid #ccc;
 }
 
 .tt-suggestion.tt-is-under-cursor {
-  color: #fff;
-  background-color: #0081c2;
-  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
+    color: #fff;
+    background-color: #0081c2;
+    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+    background-image: linear-gradient(#0088cc, #0077b3);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
 }
 .tt-suggestion.tt-is-under-cursor a {
-  color: #fff;
+    color: #fff;
 }
 .tt-suggestion p {
-  margin: 0;
+    margin: 0;
 }
 .tt-suggestion:first-child {
-  border-top: 0;
+    border-top: 0;
 }
 
 #modlist thead {
-	background-color: #FFFFFF;
+    background-color: #FFFFFF;
 }
 .modlist-table p {
-	margin: 0;
+    margin: 0;
 }
 .modlist-table a {
-	font-weight: bold;
+    font-weight: bold;
 }
 .hidden-search {
-	display: none;
+    display: none;
 }
 .input-group-btn .dropdown-menu li {
-	cursor: pointer;
+    cursor: pointer;
 }
 .advanced-search {
-	margin-top: 15px;
+    margin-top: 15px;
 }
 .input-group .input-group-addon:not(:first-child):not(:last-child), .input-group .form-control:not(:first-child):not(:last-child) {
-	border-right-width: 0;
+    border-right-width: 0;
 }
 .home-changelog div p:nth-of-type(2) {
-	min-height: 60px;
+    min-height: 60px;
 }
 #nothuman {
     display: none;
